Avoid new Double(0)